# includeguardian

./: .gitignore  LICENSE.txt  README.md
src/: CMakeLists.txt  analysis_test_fixtures.cpp  analysis_test_fixtures.hpp  benchmarks.m.cpp  build_graph.cpp  build_graph.hpp  build_graph.test.cpp  conanfile.txt  cost.cpp  cost.hpp  dfs.hpp  dot_graph.cpp  dot_graph.hpp  dot_graph.test.cpp  find_expensive_files.cpp  find_expensive_files.hpp  find_expensive_files.test.cpp  find_expensive_headers.cpp  find_expensive_headers.hpp  find_expensive_headers.test.cpp  find_expensive_includes.cpp  find_expensive_includes.hpp  find_expensive_includes.test.cpp  find_unnecessary_sources.cpp  find_unnecessary_sources.hpp  find_unnecessary_sources.test.cpp  find_unused_components.cpp  find_unused_components.hpp  find_unused_components.test.cpp  get_total_cost.cpp  get_total_cost.hpp  get_total_cost.test.cpp  graph.cpp  graph.hpp  includeguardian.cpp  includeguardian.hpp  is_guarded.test.cpp  list_included_files.cpp  list_included_files.hpp  list_included_files.test.cpp  (+15 more)
src/licenses/: README.md  termcolor.txt
website/: .jsbeautifyrc  about  articles  ci  cmake_analysis.yaml  error.html  index.html  instructions  lws.config.js  privacy-policy  style.css
website/article/: include-guards-and-their-optimizations
